K8S-Demo-Big/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard-klaudio.com
      http:
          paths:
          - path: /
            pathType: ImplementationSpecific
            backend:  
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
